deploy/manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: raskub-auth-api
  namespace: raskub-app
  labels:
    app: raskub-auth-api
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: raskub-auth-api
  type: ClusterIP
