deploy/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raskub-auth-api
  namespace: raskub-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: rpi.k8s.raskub-auth-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raskub-auth-api
                port:
                  number: 8080
